# sscripts

./: README.md
differ/: README.md  differ.js  package-lock.json  package.json  utils.js
ocr_firefox/: README.md  ocr_firefox.py  pyproject.toml  requirements.txt
youtube-playlist-tracker/: README.md  dump_playlist.sh  main.py  update_playlist.py
