[tool.poetry]
name = "ocr_firefox"
version = "0.1.0"
description = ""
authors = ["resolritter <joao.paulo.silvasouza@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
opencv-python = "4.2.0.34"
pytesseract = "^0.3.4"
numpy = "^1.19.1"
PyGObject = "^3.36.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
